--- a/app/src/main/res/layout/fragment_nutrient.xml
+++ b/app/src/main/res/layout/fragment_nutrient.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--<data>-->
+    <data>
 
-    <!--<variable-->
-    <!--name="isLoading"-->
-    <!--type="boolean" />-->
-    <!--</data>-->
+        <variable
+            name="adapter"
+            type="yoshikii.com.record_nutrients.NutrientAdapter" />
+
+        <variable
+            name="viewModel"
+            type="yoshikii.com.record_nutrients.data.NutrientViewModel"
+            />
+    </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/loading_projects"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/loading_projects"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/item_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layoutManager="LinearLayoutManager"
+            android:adapter="@{adapter}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@{viewModel.name}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/item_list" />
 
     </android.support.constraint.ConstraintLayout>
 
