--- a/app/src/main/res/layout/view_item_list.xml
+++ b/app/src/main/res/layout/view_item_list.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="mealData"
+            type="yoshikii.com.record_nutrients.repository.model.Meal" />
+    </data>
+
     <android.support.constraint.ConstraintLayout
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -15,6 +22,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:text="@{mealData.time}"
             tools:text="10:00" />
 
         <TextView
@@ -23,6 +31,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/common_black"
             android:textSize="20sp"
+            android:text="@{mealData.item}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/date"
@@ -34,6 +43,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/common_black"
             android:textSize="14sp"
+            android:text="@{String.valueOf(mealData.calorie)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/item"
