--- a/app/src/main/res/layout/view_dialog_add_meal.xml
+++ b/app/src/main/res/layout/view_dialog_add_meal.xml
@@ -8,6 +8,16 @@
         android:paddingEnd="10dp"
         android:paddingStart="10dp">
 
+        <TimePicker
+            android:id="@+id/time_picker"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:timePickerMode="spinner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/text_input_item"
             android:layout_width="0dp"
@@ -15,15 +25,15 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/time_picker">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_meal_item_label"
-                android:maxLength="50"
                 android:inputType="text"
+                android:maxLength="50"
                 android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
@@ -42,8 +52,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_meal_item_amount"
-                android:maxLength="10"
                 android:inputType="number"
+                android:maxLength="10"
                 android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
@@ -62,8 +72,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_meal_item_calorie"
-                android:maxLength="10"
                 android:inputType="number"
+                android:maxLength="10"
                 android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
@@ -84,8 +94,8 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/add_meal_item_memo"
                 android:inputType="textMultiLine"
-                android:maxLength="100"
-                android:lines="3" />
+                android:lines="3"
+                android:maxLength="100" />
 
         </android.support.design.widget.TextInputLayout>
     </android.support.constraint.ConstraintLayout>
