アクションバーの戻るボタン制御処理

--- a/app/src/main/res/layout/view_item_list.xml
+++ b/app/src/main/res/layout/view_item_list.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/common_black"
             android:textSize="20sp"
-            android:text='@{mealData.item + " " + mealData.amount + "g"}'
+            android:text='@{mealData.item + "(" + mealData.amount + "g)"}'
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/date"
