--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorAccentDark">#800000</color>
 
     <color name="common_black">#000000</color>
+    <color name="common_white">#ffffff</color>
     <color name="common_light_gray">#d3d3d3</color>
 </resources>
