--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#66cdaa</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorAccentDark">#800000</color>
+    <color name="colorAccentLight">#ffb6c1</color>
 
     <color name="common_black">#000000</color>
     <color name="common_white">#ffffff</color>
